# c-fundamentals

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: c_style_callback.h  common.h  function_parameters_pointers.h  function_pointers_demo.h  make_unique_demo.hpp  virtual_methods_demo.hpp
src/: c_style_callback.c  function_pointer_parameters_demo.c  function_pointers_demo.c  main.c
src/c/: function_pointer_parameters_demo.c  main.c
src/cpp/: contains_method.cpp  make_unique_demo.cpp  unordered_map.cpp  vector_demo.cpp  virtual_methods_demo.cpp
